Swath of changes to make sonarcube happy