@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import ca.bc.gov.nrs.vdyp.common.ControlKey;
@@ -23,14 +22,14 @@ public abstract class NonPrimarySpeciesGrowthParser extends OptionalCoefficientP
 
 	private static final String BASAL_AREA_GROUP_ID_KEY = "BasalAreaGroupId";
 
-	public NonPrimarySpeciesGrowthParser(ControlKey controlKey) {
+	protected NonPrimarySpeciesGrowthParser(ControlKey controlKey) {
 		super(1, controlKey);
 			this.speciesKey()
 				.key(  3, BASAL_AREA_GROUP_ID_KEY
 					 , ValueParser.INTEGER
-					 , IntStream.rangeClosed(0, MAX_BASAL_AREA_GROUP_ID).boxed().collect(Collectors.toList())
+					 , IntStream.rangeClosed(0, MAX_BASAL_AREA_GROUP_ID).boxed().toList()
 					 , "%s is not a valid basal area group id"
-					 , k -> Utils.nullOrBlank(k))
+					 , Utils::nullOrBlank)
 				.coefficients(3, 10);
 	}
 
